--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "sudokubiu",
+
+  "homepage": "https://github.com/s21911-pj/BIUProject.git",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +10,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
+    "gh-pages": "^4.0.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
