--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Sudoku Puzzle",
+  "name": "Sudoku Game",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000"
